<package>
  <name>moveit_pr2</name>
  <version>0.3.9</version>
  <description>All PR2-specific packages for MoveIt</description>
  <author email="isucan@willowgarage.com">Ioan Sucan</author>
  <author email="sachinc@willowgarage.com">Sachin Chitta</author>

  <maintainer email="isucan@willowgarage.com">Ioan Sucan</maintainer>

  <license>BSD</license>

  <url type="website">http://moveit.ros.org</url>

  <run_depend>pr2_moveit_plugins</run_depend>
  <run_depend>pr2_moveit_config</run_depend>
  <run_depend>pr2_moveit_tutorials</run_depend>

  <export>
    <metapackage/>
  </export>

</package>
