<package>
  <name>moveit_pr2</name>
  <version>0.6.3</version>
  <description>All PR2-specific packages for MoveIt</description>
  <author email="isucan@willowgarage.com">Ioan Sucan</author>
  <author email="sachinc@willowgarage.com">Sachin Chitta</author>

  <maintainer email="isucan@willowgarage.com">Ioan Sucan</maintainer>
  <maintainer email="mferguson@fetchrobotics.com">Michael Ferguson</maintainer>

  <license>BSD</license>

  <url type="website">http://moveit.ros.org</url>

  <buildtool_depend>catkin</buildtool_depend>

  <run_depend>pr2_moveit_plugins</run_depend>
  <run_depend>pr2_moveit_config</run_depend>
  <run_depend>pr2_moveit_tutorials</run_depend>

  <export>
    <metapackage/>
  </export>

</package>
