<package>
  <name>pr2_controllers_msgs</name>
  <version>0.3.4</version>
  <description>
     Messages, services, and actions used in the pr2_controllers stack.
  </description>
  <author email="sglaser@willowgarage.com">Stuart Glaser</author> 
  <maintainer email="control_msgs@willowgarage.com">Willow Garage</maintainer>

  <license>BSD</license>

  <url>http://ros.org/wiki/pr2_controllers_msgs</url>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>message_generation</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>trajectory_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>actionlib_msgs</build_depend>

  <run_depend>message_runtime</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>trajectory_msgs</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>actionlib_msgs</run_depend>
</package>


