<package>

  <name>pr2_moveit_config</name>
  <version>0.3.1</version>
  <description>
     pr2_moveit_config
  </description>
  <author email="assistant@moveit.ros.org">MoveIt Setup Assistant</author>
  <maintainer email="assistant@moveit.ros.org">MoveIt Setup Assistant</maintainer>

  <license>BSD</license>

  <url type="website">http://moveit.ros.org</url>
  <url type="bugtracker">https://github.com/ros-planning/moveit-setup-assistant/issues</url>
  <url type="repository">https://github.com/ros-planning/moveit-setup-assistant</url>

  <buildtool_depend>catkin</buildtool_depend>
  
  <run_depend>moveit_ros_planning</run_depend>

</package>
