<package>
  <name>pr2_moveit_plugins</name>
  <version>0.3.9</version>
  <description>PR2 specific plugins for MoveIt</description>
  <author email="isucan@willowgarage.com">Ioan Sucan</author>
  <author email="sachinc@willowgarage.com">Sachin Chitta</author>
  <author email="gjones@willowgarage.com">Gil Jones</author>

  <maintainer email="isucan@willowgarage.com">Ioan Sucan</maintainer>

  <license>BSD</license>

  <url type="website">http://moveit.ros.org</url>
  <url type="bugtracker">https://github.com/ros-planning/moveit-ros/issues</url>
  <url type="repository">https://github.com/ros-planning/moveit-ros</url>

  <buildtool_depend>catkin</buildtool_depend> 

  <build_depend>moveit_core</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>kdl_parser</build_depend>
  <build_depend>urdf</build_depend>
  <build_depend>tf_conversions</build_depend>
  <build_depend>eigen_conversions</build_depend>
  <build_depend>pluginlib</build_depend>
  <build_depend>control_msgs</build_depend> 
  <build_depend>pr2_mechanism_msgs</build_depend>
  <build_depend>actionlib</build_depend>
  <build_depend>angles</build_depend>

  <run_depend>moveit_core</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>kdl_parser</run_depend>
  <run_depend>urdf</run_depend>
  <run_depend>tf_conversions</run_depend>
  <run_depend>eigen_conversions</run_depend>
  <run_depend>pluginlib</run_depend>
  <run_depend>control_msgs</run_depend> 
  <run_depend>pr2_mechanism_msgs</run_depend>
  <run_depend>actionlib</run_depend> 
  <run_depend>angles</run_depend>

  <export>
    <moveit_core plugin="${prefix}/pr2_moveit_sensor_manager_plugin_description.xml"/>
    <moveit_core plugin="${prefix}/pr2_moveit_controller_manager_plugin_description.xml"/> 
    <moveit_core plugin="${prefix}/pr2_moveit_kinematics_plugin_description.xml"/>
  </export>

</package>
