<?xml version="1.0"?>
<package>
  <name>pr2_moveit_tests</name>
  <version>0.6.3</version>
  <description>The pr2_moveit_tests package</description>
  <maintainer email="sachinc@willowgarage.com">sachinc</maintainer>
  <license>BSD</license>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>pluginlib</build_depend>
  <build_depend>moveit_core</build_depend>
  <build_depend>moveit_ros_planning</build_depend>
  <build_depend>moveit_ros_perception</build_depend>
  <build_depend>octomap</build_depend>
  <build_depend>orocos_kdl</build_depend>
  <build_depend>libfcl-dev</build_depend>

  <run_depend>pluginlib</run_depend>
  <run_depend>moveit_core</run_depend>
  <run_depend>moveit_ros_planning</run_depend>
  <run_depend>moveit_ros_perception</run_depend>
  <run_depend>octomap</run_depend>
  <run_depend>libfcl-dev</run_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- You can specify that this package is a metapackage here: -->
    <!-- <metapackage/> -->
    
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
